Fix padding top of the title on small screen display

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@ body {
 
 /** Header **/ 
 .navbar-brand {
-   padding-top: 45px; 
+   padding-top: 25px;
    padding-bottom: 25px;
    padding-left: 25px;
 }
@@ -28,7 +28,8 @@ body {
 }
 
 .navbar-nav { 
-    margin-left: auto; 
+    margin-left: auto;  
+    padding-top: 45px; 
  } 
 
 .custom-toggler.navbar-toggler { 
@@ -47,9 +48,11 @@ body {
 .active a:hover {
     border-bottom: 1px solid black;
 }
-
 .active {
   border-bottom: 1px solid black;
+}
+.navbar-brand {
+   padding-top: 45px; 
 }
 }
 
@@ -59,9 +62,11 @@ body {
 .active a:hover {
     border-bottom: 1px solid black;
 }
-
 .active {
   border-bottom: 1px solid black;
+}
+navbar-brand {
+   padding-top: 45px; 
 }
 }
 
